# botsale

./: README.md  pyproject.toml
app/: main.py
app/config/: settings.py
app/database/: session.py
app/handlers/: __init__.py  user.py  worker.py
app/keyboards/: main_menu.py
app/models/: entities.py
app/repositories/: catalog.py  orders.py
app/services/: stock.py  workers.py
app/utils/: seed_data.py
tests/: test_delivery_mode.py
